# gps-watch

./: .gitignore  Cargo.toml  README.md  gdb.cfg  lldb.cfg  memory.x  openocd.cfg  run-gdb
.cargo/: config.toml
lib/stm32l4xx-hal/: Cargo.toml
lib/stm32l4xx-hal/src/: adc.rs  delay.rs  gpio.rs  lib.rs  prelude.rs  pwm.rs  rtc.rs  serial.rs  spi.rs  timer.rs  watchdog.rs
lib/stm32l4xx-hal/src/gpio/: erased.rs  partially_erased.rs
maptest/: .gitignore  parse.py
src/: bin.rs  display.rs  gps.rs  lib.rs  nmea.rs  rb.rs  tactile.rs  ubx.rs
src/ubx/: cfg.rs  generator.rs  mod.rs  packets.rs  parser.rs
stm32l4xx-hal/src/: rtc.rs
ublox/ublox/: Cargo.toml
ublox/ublox/src/: parser.rs
