[package]
name = "gps-watch"
authors = ["Gary Bailey", "Carson Swoveland", "Twain Byrnes"]
edition = "2021"
version = "0.1.0"

[[bin]]
name = "gps-watch"
path = "./src/bin.rs"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l442", "stm32-usbd"] }
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick", "systick-100hz"]}
thiserror = { version = "1.0.50", package = "thiserror-core", default-features = false }
embedded-graphics = "0.8.1"
tinyvec = { version = "1.6.0", features = ["rustc_1_55"] }
nb = "1.1.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
stm32-usbd = "0.6.0"
usb-device = { version = "0.2.9", features = ["defmt"] }
usbd-serial = "0.1.0"
rtic-sync = "1.3.0"
embedded-text = "0.7.0"
u8g2-fonts = "0.4.0"
chrono = { version = "0.4.34", default-features = false }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }

[patch.crates-io]
stm32l4xx-hal = { path = "./lib/stm32l4xx-hal" }
# embedded-graphics = { path = "./lib/embedded-graphics" }
# embedded-graphics-core = { path = "./lib/embedded-graphics/core" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
lto = "fat"
opt-level = "s" # <-
overflow-checks = true # <-

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "z" # <-
overflow-checks = false # <-

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
